; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_crlf.c_system_type.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_crlf.c_system_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_EOL_NATIVE = common dso_local global i64 0, align 8
@GIT_EOL_CRLF = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [8 x i8] c"windows\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"posix\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @system_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @system_type() #0 {
  %1 = alloca i8*, align 8
  %2 = load i64, i64* @GIT_EOL_NATIVE, align 8
  %3 = load i64, i64* @GIT_EOL_CRLF, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %7

6:                                                ; preds = %0
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %1, align 8
  br label %7

7:                                                ; preds = %6, %5
  %8 = load i8*, i8** %1, align 8
  ret i8* %8
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
